# molecular-dynamics

./: .gitignore  Readme.md  main.py  pyproject.toml  updated_main.py
configurations/: mass_configurations.json  particle_type_configurations.json  simulation_configurations.json  simulation_configurations.yml
force_fields/: functions.py
molecules/: water.py
simulations/periodic/: 0.dump  1.dump  2.dump  3.dump  4.dump  5.dump  6.dump  7.dump  8.dump  9.dump
simulations/reflective/: 0.dump  1.dump  2.dump  3.dump  4.dump  5.dump  6.dump  7.dump  8.dump  9.dump
simulator/: simulator.py
utilities/: constants.py  utils.py
