[project]
name = "molecular-dynamics"
version = "0.1.0"
description = ""
authors = [
    {name = "Robert Kelevra",email = "kelevra.robert@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "plotext (>=5.3.2,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
